force-app/main/default/objects/Pipeline__c/Pipeline__c.object-meta.xml
<CustomObject>
    <label>Pipeline</label>
    <description>Manages pipeline infrastructure assets including capacity, commodity type, inspection compliance, and integrity status.</description>
    <nameField>
        <label>Pipeline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>