force-app/main/default/objects/Pipeline__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>