force-app/main/default/objects/Pipeline__c/fields/Diameter_inches__c.field-meta.xml
<CustomField>
    <fullName>Diameter_inches__c</fullName>
    <label>Diameter inches</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>