force-app/main/default/objects/Pipeline__c/fields/MAOP__c.field-meta.xml
<CustomField>
    <fullName>MAOP__c</fullName>
    <label>MAOP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>