force-app/main/default/objects/Pipeline__c/fields/Operating_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Operating_Pressure__c</fullName>
    <label>Operating Pressure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>