force-app/main/default/objects/Pipeline__c/fields/PI_Tag__c.field-meta.xml
<CustomField>
    <fullName>PI_Tag__c</fullName>
    <externalId>true</externalId>
    <label>PI Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>