force-app/main/default/objects/Pipeline__c/fields/Required_Inspection_Interval_Months__c.field-meta.xml
<CustomField>
    <fullName>Required_Inspection_Interval_Months__c</fullName>
    <label>Required Inspection Interval (Months)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>