force-app/main/default/objects/Pipeline__c/fields/Segment_Length_Miles__c.field-meta.xml
<CustomField>
    <fullName>Segment_Length_Miles__c</fullName>
    <label>Segment Length Miles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>