force-app/main/default/objects/Pipeline__c/fields/SHVS_Class_Location__c.field-meta.xml
<CustomField>
    <fullName>SHVS_Class_Location__c</fullName>
    <label>SHVS Class Location</label>
    <type>Text</type>
    <length>255</length>
</CustomField>