force-app/main/default/objects/Pipeline__c/validationRules/Operating_Pressure_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Operating_Pressure_Limits</fullName>
    <active>true</active>
    <description>Operating pressure must not exceed MAOP (Maximum Allowable Operating Pressure).</description>
    <errorConditionFormula>NOT(ISBLANK(Operating_Pressure__c)) &amp;&amp; NOT(ISBLANK(MAOP__c)) &amp;&amp; Operating_Pressure__c &gt; MAOP__c</errorConditionFormula>
    <errorMessage>Operating Pressure cannot exceed MAOP (Maximum Allowable Operating Pressure).</errorMessage>
</ValidationRule>