force-app/main/default/objects/Pipeline__c/validationRules/Require_Diameter_And_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Diameter_And_Capacity</fullName>
    <active>true</active>
    <description>Pipeline must have diameter and capacity specified.</description>
    <errorConditionFormula>ISBLANK(Diameter_inches__c) || ISBLANK(Capacity_bpd__c)</errorConditionFormula>
    <errorMessage>Pipeline Diameter and Capacity are required fields.</errorMessage>
</ValidationRule>